<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- onClick doesn't seem to work here -->

    <item
        android:id="@+id/functions"
        android:orderInCategory="50"
        android:showAsAction="ifRoom"
        android:title="@string/functions">
        <menu>

            <!-- Functions Menu -->
            <item
                android:id="@+id/center_of_mass"
                android:orderInCategory="50"
                android:showAsAction="ifRoom"
                android:title="@string/center_of_mass"/>
            <item
                android:id="@+id/show_circles"
                android:orderInCategory="50"
                android:showAsAction="ifRoom"
                android:title="@string/show_circles"/>
            <item
                android:id="@+id/under_development"
                android:orderInCategory="50"
                android:showAsAction="ifRoom"
                android:title="under_development"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings">

        <!-- Settings Menu -->
        <menu>
            <item
                android:id="@+id/my_location"
                android:orderInCategory="50"
                android:showAsAction="ifRoom"
                android:title="@string/my_location"/>
            <item
                android:id="@+id/map_type"
                android:orderInCategory="50"
                android:showAsAction="ifRoom"
                android:title="@string/map_type">
                <menu>

                    <!-- Map Types Sub Menu -->
                    <item
                        android:id="@+id/hybrid"
                        android:orderInCategory="50"
                        android:showAsAction="ifRoom"
                        android:title="@string/hybrid"/>
                    <item
                        android:id="@+id/normal"
                        android:orderInCategory="50"
                        android:showAsAction="ifRoom"
                        android:title="@string/normal"/>
                    <item
                        android:id="@+id/terrain"
                        android:orderInCategory="50"
                        android:showAsAction="ifRoom"
                        android:title="@string/terrain"/>
                    <item
                        android:id="@+id/satellite"
                        android:orderInCategory="50"
                        android:showAsAction="ifRoom"
                        android:title="@string/satellite"/>
                </menu>
            </item>
            <item
                android:id="@+id/more"
                android:orderInCategory="50"
                android:showAsAction="ifRoom"
                android:title="More Maps Settings"/>
        </menu>
    </item>

</menu>